--- a/index.html
+++ b/index.html
@@ -1,112 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-BR" data-bs-theme="auto">
+<html lang="pt-BR">
   <head>
-    <script src="./assets/js/color-modes.js"></script>
-
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
     <title>Duds & Mo</title>
 
-    <link
-      rel="canonical"
-      target="_blank"
-      href="https://getbootstrap.com/docs/5.3/examples/carousel/"
-    />
-
-    <link
-      rel="stylesheet"
-      target="_blank"
-      href="https://cdn.jsdelivr.net/npm/@docsearch/css@3"
-    />
-
-    <link href="./assets/dist/css/bootstrap.min.css" rel="stylesheet" />
-
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 2rem;
-        }
-      }
-
-      .b-example-divider {
-        width: 100%;
-        height: 3rem;
-        background-color: rgba(0, 0, 0, 0.1);
-        border: solid rgba(0, 0, 0, 0.15);
-        border-width: 1px 0;
-        box-shadow: inset 0 0.5em 1.5em rgba(0, 0, 0, 0.1),
-          inset 0 0.125em 0.5em rgba(0, 0, 0, 0.15);
-      }
-
-      .b-example-vr {
-        flex-shrink: 0;
-        width: 1.5rem;
-        height: 100vh;
-      }
-
-      .bi {
-        vertical-align: -0.125em;
-        fill: currentColor;
-      }
-
-      .nav-scroller {
-        position: relative;
-        z-index: 2;
-        height: 2.75rem;
-        overflow-y: hidden;
-      }
-
-      .nav-scroller .nav {
-        display: flex;
-        flex-wrap: nowrap;
-        padding-bottom: 1rem;
-        margin-top: -1px;
-        overflow-x: auto;
-        text-align: center;
-        white-space: nowrap;
-        -webkit-overflow-scrolling: touch;
-      }
-
-      .btn-bd-primary {
-        --bd-violet-bg: #712cf9;
-        --bd-violet-rgb: 112.520718, 44.062154, 249.437846;
-
-        --bs-btn-font-weight: 600;
-        --bs-btn-color: var(--bs-white);
-        --bs-btn-bg: var(--bd-violet-bg);
-        --bs-btn-border-color: var(--bd-violet-bg);
-        --bs-btn-hover-color: var(--bs-white);
-        --bs-btn-hover-bg: #6528e0;
-        --bs-btn-hover-border-color: #6528e0;
-        --bs-btn-focus-shadow-rgb: var(--bd-violet-rgb);
-        --bs-btn-active-color: var(--bs-btn-hover-color);
-        --bs-btn-active-bg: #5a23c8;
-        --bs-btn-active-border-color: #5a23c8;
-      }
-
-      .bd-mode-toggle {
-        z-index: 1500;
-      }
-
-      .bd-mode-toggle .dropdown-menu .active .bi {
-        display: block !important;
-      }
-    </style>
-
-    <!-- Custom styles for this template -->
-    <link href="carousel.css" rel="stylesheet" />
-
-    <!-- Duds & Mo Style-->
-    <link href="styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="styles.css" />
 
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -119,18 +19,30 @@
 
   <body>
     <!-- Header -->
-    <header data-bs-theme="dark">
+    <header>
       <nav
-        class="navbar navbar-expand-md duds_mo_bgc"
-        style="border-bottom: 4px solid black; height: 20vh"
+        class="duds_mo_bgc"
+        style="
+          border-bottom: 4px solid black;
+          height: 20vh;
+          display: flex;
+          align-items: center;
+          padding: 0 20px;
+        "
       >
         <img id="logo" src="./assets/pictures/duds_mo.png" />
         <a
-          style="font-size: 30px; color: black"
-          class="navbar-brand large_font"
+          style="
+            font-size: 30px;
+            color: black;
+            margin-left: 20px;
+            text-decoration: none;
+            font-weight: bold;
+          "
           href="#"
-          >Duds & Mo Productions</a
         >
+          Duds & Mo Productions
+        </a>
       </nav>
     </header>
 
@@ -141,46 +53,59 @@
         display: flex;
         flex-direction: column;
         justify-content: space-around;
+        align-items: center;
       "
     >
       <!-- Social media -->
-      <div class="row social">
+      <div
+        class="social"
+        style="
+          display: flex;
+          flex-wrap: wrap;
+          gap: 15px;
+          justify-content: center;
+        "
+      >
         <a
           target="_blank"
           href="https://www.instagram.com/duds_mo?igsh=MTk2ejBsMHM4ODhzdg=="
-          class="navbar-brand large_font"
-          ><img src="assets/pictures/insta.png" /> Instagram</a
+          class="social-link"
         >
-        <a
-          target="_blank"
-          href="https://x.com/duds_mo_art"
-          class="navbar-brand large_font"
-          ><img src="assets/pictures/x.png" /> X</a
-        >
+          <img src="assets/pictures/insta.png" /> Instagram
+        </a>
+        <a target="_blank" href="https://x.com/duds_mo_art" class="social-link">
+          <img src="assets/pictures/x.png" /> X
+        </a>
         <a
           target="_blank"
           href="https://www.youtube.com/channel/UCGYyPDQwVu0wZw6ApNvMPrw"
-          class="navbar-brand large_font"
-          ><img src="assets/pictures/yt.png" /> YouTube</a
+          class="social-link"
         >
+          <img src="assets/pictures/yt.png" /> YouTube
+        </a>
         <a
           target="_blank"
           href="https://www.tiktok.com/@duds_mo"
-          class="navbar-brand large_font"
-          ><img src="assets/pictures/tiktok.png" /> TikTok</a
+          class="social-link"
         >
+          <img src="assets/pictures/tiktok.png" /> TikTok
+        </a>
         <a
           target="_blank"
           href="https://t.me/+4jie6M1Y1egwNmEx"
-          class="navbar-brand large_font"
-          ><img src="assets/pictures/telegram.png" /> Telegram</a
+          class="social-link"
         >
+          <img src="assets/pictures/telegram.png" />
+          Telegram
+        </a>
         <a
           target="_blank"
           href="https://www.twitch.tv/duds_mo"
-          class="navbar-brand large_font"
-          ><img src="assets/pictures/tw.png" /> Twitch</a
+          class="social-link"
         >
+          <img src="assets/pictures/tw.png" /> Twitch
+        </a>
       </div>
+    </main>
   </body>
 </html>
